--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -42,6 +42,8 @@ r.Lumen.HardwareRayTracing=True
 r.Lumen.TraceMeshSDF=1
 
 r.MinRoughnessOverride=0.02
+r.AntiAliasingMethod=1
+r.DefaultFeature.MotionBlur=False
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Main.Main
