--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -46,7 +46,7 @@ r.AntiAliasingMethod=1
 r.DefaultFeature.MotionBlur=False
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Main.Main
+EditorStartupMap=/Game/Maps/MAP_Duel.MAP_Duel
 +EditorTemplateMapOverrides=(Thumbnail="/Game/ArchvisDefault/Levels/Thumbnails/Thumbnail_Empty.Thumbnail_Empty",Map="/Game/ArchvisDefault/Levels/Archvis_Empty.Archvis_Empty",DisplayName=NSLOCTEXT("[/Script/EngineSettings]", "E1C1BC224C1F413942879D8305132FF6", "Archvis Empty"))
 LocalMapOptions=
 TransitionMap=None
@@ -56,9 +56,9 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/ArchvisDefault/Levels/Archvis_Empty.Archvis_Empty
+GameDefaultMap=/Game/Maps/MAP_Duel.MAP_Duel
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
+GlobalDefaultGameMode=/Game/BluePrints/GM_Duel.GM_Duel_C
 GlobalDefaultServerGameMode=None
 
 [/Script/UnrealEd.UnrealEdEngine]
