--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -44,6 +44,7 @@ r.Lumen.TraceMeshSDF=1
 r.MinRoughnessOverride=0.02
 r.AntiAliasingMethod=1
 r.DefaultFeature.MotionBlur=False
+r.DefaultFeature.AutoExposure=False
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/MAP_Duel.MAP_Duel
